--- a/repository/src/main/resources/alfresco/templates/webscripts/org/orderofthebee/support-tools/admin/ootbee-support-tools/solr-tracking.get.properties
+++ b/repository/src/main/resources/alfresco/templates/webscripts/org/orderofthebee/support-tools/admin/ootbee-support-tools/solr-tracking.get.properties
@@ -27,6 +27,24 @@ solr-tracking.section.approx.transaction.description=Estimated number of outstan
 solr-tracking.section.memory.usage.title=Memory Usage
 solr-tracking.section.memory.usage.description=Current memory usage. Note: This value may vary due to transient memory used by background processing. The value does not include Lucene related caches.
 
+solr-tracking.section.detail.title=Detailed Tracking Status
+solr-tracking.section.detail.metadata.title=Metadata Tracker in Progress
+solr-tracking.section.detail.metadata.description=Search is retrieving nodes and properties from Repository.
+solr-tracking.section.detail.content.title=Content Tracker in Progress
+solr-tracking.section.detail.content.description=Search is retrieving text content from nodes in the Repository.
+solr-tracking.section.detail.acl.title=ACL Tracker in Progress
+solr-tracking.section.detail.acl.description=Search is retrieving permissions (ACLs) from Repository.
+solr-tracking.section.detail.cascade.title=Cascade Tracker in Progress
+solr-tracking.section.detail.cascade.description=Search is retrieving path information and path changes from Repository.
+solr-tracking.section.detail.metadata.count.title=Approx Transaction To Index
+solr-tracking.section.detail.metadata.count.description=Estimated number of outstanding transactions containing metadata that require indexing.
+solr-tracking.section.detail.content.count.title=Count of Content from Documents To Index
+solr-tracking.section.detail.content.count.description=Estimated number of documents containing content that require indexing.
+solr-tracking.section.detail.acl.count.title=Approx Transaction To Index
+solr-tracking.section.detail.acl.count.description=Estimated number of outstanding transactions containing ACLs that require indexing.
+solr-tracking.section.detail.cascade.count.title=Count of Documents for Path Indexing
+solr-tracking.section.detail.cascade.count.description=Estimated number of documents that require path indexing.
+
 solr-tracking.gibibytes={0} GiB
 solr-tracking.mebibytes={0} MiB
 solr-tracking.kibibytes={0} KiB
